--- a/index.html
+++ b/index.html
@@ -5,33 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/icono4.jpg" type="image/x-icon" />
+    <!-- link Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Link libreria AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Adopt me</title>
   </head>
   <body>
     <header>
-      <div class="menu">
-        <div class="logo">
-          <a href="index.html"
-            ><img class="logo" src="img/icono4.jpg" alt="Es un logo."
-          /></a>
+      <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img class="logo" src="img/icono4.jpg" alt="Icon" />
+          </a>
+          <button
+            class="navbar-toggler navbar-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse navbar-style" id="navbarNav">
+            <ul class="navbar-nav nav-list">
+              <li class="nav-item">
+                <a
+                  class="nav-link nav-text"
+                  aria-current="page"
+                  href="index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="adoptar.html">Adoptar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="donar.html">Donar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="mascotas-perdidas.html"
+                  >Mascotas Perdidas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <nav>
-          <ul>
-            <li><a class="enlaces" href="index.html">Inicio</a></li>
-            <li><a class="enlaces" href="adoptar.html">Adoptar</a></li>
-            <li><a class="enlaces" href="donar.html">Donar</a></li>
-            <li><a class="enlaces" href="mascotas-perdidas.html">Mascotas Perdidas</a></li>
-            <li><a class="enlaces" href="contacto.html">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
+      </nav>
       <div class="textos">
         <h1 class="texto">ADOPT ME</h1>
         <p>
-          Somos una organización sin fines de lucro,nuestra meta es brindar
-          ayuda y darles hogar a los animales de la calle.En esta página podrás
+          Somos una organización sin fines de lucro , nuestra meta es brindar
+          ayuda y darles hogar a los animales de la calle. En esta página podrás
           adoptar a tu nueva mascota y también podrás ayudar a encontrar alguna
           mascota que lamentablemente se haya perdido.
         </p>
@@ -44,10 +80,14 @@
       </h3>
       <article class="caso1">
         <img
-          class="imagenes-main" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
+          class="imagenes-main"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000"
           src="img/experiencia1.jpg"
           alt="Un perro con su dueño."
         />
+
         <p class="parrafos-inicio">
           El haber adoptado a Braco fue muy bonito es un perro muy inteligente y
           divertido , me alegra mucho haberlo adoptado aquel dia.
@@ -55,7 +95,10 @@
       </article>
       <article class="caso2">
         <img
-          class="imagenes-main" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
+          class="imagenes-main"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000"
           src="img/experiencia2.jpg"
           alt="Un perro con su dueño."
         />
@@ -67,7 +110,10 @@
       </article>
       <article class="caso3">
         <img
-          class="imagenes-main" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
+          class="imagenes-main"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000"
           src="img/experiencia3.jpg"
           alt="Un perro con su dueño."
         />
@@ -80,7 +126,7 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="logo">
+        <div>
           <a href="index.html"
             ><img class="logo" src="img/icono4.jpg" alt="Es un logo."
           /></a>
@@ -129,6 +175,11 @@
       </div>
     </footer>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"
+  ></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
