--- a/mascotas-perdidas.html
+++ b/mascotas-perdidas.html
@@ -5,27 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/icono4.jpg" type="image/x-icon" />
+    <!-- link Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
+    <!--Link libreria AOS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>MASCOTAS PERDIDAS</title>
   </head>
   <body>
     <header>
-      <div class="menu">
-        <div class="logo">
-          <a href="index.html"
-            ><img src="img/icono4.jpg" alt="Es un logo."
-          /></a>
+      <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img class="logo" src="img/icono4.jpg" alt="Icon" />
+          </a>
+          <button
+            class="navbar-toggler navbar-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse navbar-style" id="navbarNav">
+            <ul class="navbar-nav nav-list">
+              <li class="nav-item">
+                <a
+                  class="nav-link nav-text"
+                  aria-current="page"
+                  href="index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="adoptar.html">Adoptar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="donar.html">Donar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="mascotas-perdidas.html"
+                  >Mascotas Perdidas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <nav>
-          <ul>
-            <li><a class="enlaces" href="index.html">Inicio</a></li>
-            <li><a class="enlaces" href="adoptar.html">Adoptar</a></li>
-            <li><a class="enlaces" href="donar.html">Donar</a></li>
-            <li><a class="enlaces" href="mascotas-perdidas.html">Mascotas Perdidas</a></li>
-            <li><a class="enlaces" href="contacto.html">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
+      </nav>
       <div class="textos">
         <h1 class="texto">MASCOTAS PERDIDAS</h1>
       </div>
@@ -38,69 +75,150 @@
       </p>
       <section class="mascotas">
         <div class="lista-mascotas-perdidas">
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida1.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">DOKY</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Doky</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida2.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">DORIS</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Doris</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida3.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">DARIL</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Daril</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida4.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">ROCO</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Roco</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida5.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">MATE</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Mate</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida6.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">LAYCA</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Layca</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida7.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">SIMBA</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Simba</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
-          <div>
+          <div class="tarjeta"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          data-aos-duration="1000">
             <img
-              class="imagenes-main"
+              class="tarjeta-img"
               src="img/mascota-perdida8.jpg"
-              alt="Imagen de un perrito"
+              alt="Imagen de un perro"
             />
-            <p class="nombre">ZEUS</p>
+            <div class="tarjeta-info">
+              <h5 class="tarjeta-info-nombre">Zeus</h5>
+              <p class="tarjeta-info-descripcion">
+                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
+              </p>
+              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+            </div>
           </div>
         </div>
       </section>
@@ -156,4 +274,15 @@
       </div>
     </footer>
   </body>
+  <!--link bootstrap js-->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"
+  ></script>
+  <!--link libreria AOS js-->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </html>
