--- a/adoptar.html
+++ b/adoptar.html
@@ -87,10 +87,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Pelusa</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
+                Pelusa es una perrita muy juguetona, puede ser engreida en algunas
+                ocasiones,pero es muy divertida.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -104,9 +104,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Boby</h5>
               <p class="tarjeta-info-descripcion">
-                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit
+                Boby es un gatito muy jugueton, puede ser engreido en algunas
+                ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -120,10 +121,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Boky</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Boky es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -137,10 +138,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Lisa</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
+                Lisa es una gatita muy juguetona, puede ser engreida en algunas
+                ocasiones,pero es muy divertida.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -154,10 +155,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Toby</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Toby es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -171,10 +172,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Garfield</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Garfield es un gatito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -188,10 +189,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Rey</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Rey es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -205,10 +206,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Rous</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
+                Rous es una perrita muy juguetona, puede ser engreida en algunas
+                ocasiones,pero es muy divertida.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
           <div class="tarjeta" data-aos="fade-up"
@@ -222,10 +223,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Peluchin</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Peluchin es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">ADOPTAR</a>
             </div>
           </div>
         </section>
