--- a/mascotas-perdidas.html
+++ b/mascotas-perdidas.html
@@ -87,10 +87,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Doky</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Doky es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
             </div>
           </div>
           <div class="tarjeta"
@@ -105,10 +105,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Doris</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
+                Doris es una perrita muy juguetona, puede ser engreida en algunas
+                ocasiones,pero es muy divertida.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LA VI</a>
             </div>
           </div>
           <div class="tarjeta"
@@ -123,10 +123,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Daril</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Daril es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
             </div>
           </div>
           <div class="tarjeta"
@@ -141,10 +141,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Roco</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Roco es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
             </div>
           </div>
           <div class="tarjeta"
@@ -159,10 +159,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Mate</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Mate es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
             </div>
           </div>
           
@@ -178,10 +178,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Layca</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
+                Layca es una perrita muy juguetona, puede ser engreida en algunas
+                ocasiones,pero es muy divertida.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LA VI</a>
             </div>
           </div>
           <div class="tarjeta"
@@ -196,10 +196,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Simba</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Simba es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
             </div>
           </div>
           <div class="tarjeta"
@@ -214,10 +214,10 @@
             <div class="tarjeta-info">
               <h5 class="tarjeta-info-nombre">Zeus</h5>
               <p class="tarjeta-info-descripcion">
-                Garfiel es un gatito muy jugueton, puede ser engreido en algunas
+                Zeus es un perrito muy jugueton, puede ser engreido en algunas
                 ocasiones,pero es muy divertido.
               </p>
-              <a href="contacto.html" class="tarjeta-boton">MATCH</a>
+              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
             </div>
           </div>
         </div>
